added validation to ipaddress and host added form element

--- a/src/app/edit-network-switching/edit-network-switching.component.html
+++ b/src/app/edit-network-switching/edit-network-switching.component.html
@@ -1,114 +1,116 @@
 <div *ngIf="nwsw">
-  <div class="panel-group" id="accordion">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h4 class="panel-title">
-          <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
-            General
-          </a>
-        </h4>
-      </div>
-      <div id="collapse1" class="panel-collapse collapse in">
-        <div class="panel-body">
-          <div class="networkswitch-part">
-            <div>
-              <label class="networkswitch-label">id</label>
-              <input class="networkswitch-value" [(ngModel)]="nwsw.id" placeholder="id" />
+  <form >
+    <div class="panel-group" id="accordion">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h4 class="panel-title">
+            <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
+              General
+            </a>
+          </h4>
+        </div>
+        <div id="collapse1" class="panel-collapse collapse in">
+          <div class="panel-body">
+            <div class="networkswitch-part">
+              <div>
+                <label class="networkswitch-label">id</label>
+                <input class="form-control networkswitch-value" [(ngModel)]="nwsw.id" placeholder="id" name="id" type="number" />
+              </div>
+              <div>
+                <label class="networkswitch-label">protocol</label>
+                <input class="form-control networkswitch-value" [(ngModel)]="nwsw.protocol" name="protocol" placeholder="protocol" />
+              </div>
+              <div>
+                <label class="networkswitch-label">state</label>
+                <input class="form-control networkswitch-value" [(ngModel)]="nwsw.state" name="state" placeholder="state" />
+              </div>
+              <div>
+                <label class="networkswitch-label">remark</label>
+                <textarea class="form-control networkswitch-value" [(ngModel)]="nwsw.remark" name="remark" placeholder="remark"></textarea>
+              </div>
             </div>
-            <div>
-              <label class="networkswitch-label">protocol</label>
-              <input class="networkswitch-value" [(ngModel)]="nwsw.protocol" placeholder="protocol" />
-            </div>
-            <div>
-              <label class="networkswitch-label">state</label>
-              <input class="networkswitch-value" [(ngModel)]="nwsw.state" placeholder="state" />
-            </div>
-            <div>
-              <label class="networkswitch-label">remark</label>
-              <textarea class="networkswitch-value" [(ngModel)]="nwsw.remark" placeholder="remark"></textarea>
+            <div class="networkswitch-part">
+              <div>
+                <label class="networkswitch-label">testresultList</label>
+                <input class="form-control networkswitch-value" [(ngModel)]="nwsw.testresultList" name="testresultList" placeholder="testresultList" />
+              </div>
             </div>
           </div>
-          <div class="networkswitch-part">
-            <div>
-              <label class="networkswitch-label">testresultList</label>
-              <input class="networkswitch-value" [(ngModel)]="nwsw.testresultList" placeholder="testresultList" />
+        </div>
+      </div>
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h4 class="panel-title">
+            <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
+             Host: {{nwsw.source.host}}
+            </a>
+          </h4>
+        </div>
+        <div id="collapse2" class="panel-collapse collapse">
+          <div class="panel-body">
+            <div class="networkswitch-part">
+              <div>
+                <label class="networkswitch-label">Host</label>
+                <input class="form-control networkswitch-value" [(ngModel)]="nwsw.source.host" name="source-host" placeholder="Host" pattern="^(([a-zA-Z0-9]|[a-zA-Z0-9][a-zA-Z0-9\-]*[a-zA-Z0-9])\.)*([A-Za-z0-9]|[A-Za-z0-9][A-Za-z0-9\-]*[A-Za-z0-9])$" />
+              </div>
+              <div>
+                <label class="networkswitch-label">Gruppe</label>
+                <input class="form-control networkswitch-value" [(ngModel)]="nwsw.source.group" name="source-group" placeholder="Gruppe" />
+              </div>
+              <div>
+                <label class="networkswitch-label">Ip Adresse</label>
+                <input class="form-control networkswitch-value" [(ngModel)]="nwsw.source.ipAddr" name="source-ipAddr" placeholder="Ip Adresse" pattern="^[0-9.-]+$" />
+              </div>
+              <div>
+                <label class="networkswitch-label">Port</label>
+                <input class="form-control networkswitch-value" [(ngModel)]="nwsw.source.port" name="source-port" placeholder="Port" type="number" />
+              </div>
+              <div>
+                <label class="networkswitch-label">Zone</label>
+                <input class="form-control networkswitch-value" [(ngModel)]="nwsw.source.zone" name="source-zone" placeholder="Zone" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h4 class="panel-title">
+            <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
+             Destination: {{nwsw.destination.host}}
+            </a>
+          </h4>
+        </div>
+        <div id="collapse3" class="panel-collapse collapse">
+          <div class="panel-body">
+            <div class="networkswitch-part">
+              <div>
+                <label class="networkswitch-label">Host</label>
+                <input class="form-control networkswitch-value" [(ngModel)]="nwsw.destination.host" name="source-host" placeholder="Host" pattern="^(([a-zA-Z0-9]|[a-zA-Z0-9][a-zA-Z0-9\-]*[a-zA-Z0-9])\.)*([A-Za-z0-9]|[A-Za-z0-9][A-Za-z0-9\-]*[A-Za-z0-9])$" />
+              </div>
+              <div>
+                <label class="networkswitch-label">Gruppe</label>
+                <input class="form-control networkswitch-value" [(ngModel)]="nwsw.destination.group" name="source-group" placeholder="Gruppe" />
+              </div>
+              <div>
+                <label class="networkswitch-label">Ip Adresse</label>
+                <input class="form-control networkswitch-value" [(ngModel)]="nwsw.destination.ipAddr" name="source-ipAddr" placeholder="Ip Adresse" pattern="^[0-9.-]+$" />
+              </div>
+              <div>
+                <label class="networkswitch-label">Port</label>
+                <input class="form-control networkswitch-value" [(ngModel)]="nwsw.destination.port" name="source-port" placeholder="Port" />
+              </div>
+              <div>
+                <label class="networkswitch-label">Zone</label>
+                <input class="form-control networkswitch-value" [(ngModel)]="nwsw.destination.zone" name="source-zone" placeholder="Zone" />
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h4 class="panel-title">
-          <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
-           Host: {{nwsw.source.host}}
-          </a>
-        </h4>
-      </div>
-      <div id="collapse2" class="panel-collapse collapse">
-        <div class="panel-body">
-          <div class="networkswitch-part">
-            <div>
-              <label class="networkswitch-label">Host</label>
-              <input class="networkswitch-value" [(ngModel)]="nwsw.source.host" placeholder="Host" />
-            </div>
-            <div>
-              <label class="networkswitch-label">Gruppe</label>
-              <input class="networkswitch-value" [(ngModel)]="nwsw.source.group" placeholder="Gruppe" />
-            </div>
-            <div>
-              <label class="networkswitch-label">Ip Adresse</label>
-              <input class="networkswitch-value" [(ngModel)]="nwsw.source.ipAddr" placeholder="Ip Adresse" />
-            </div>
-            <div>
-              <label class="networkswitch-label">Port</label>
-              <input class="networkswitch-value" [(ngModel)]="nwsw.source.port" placeholder="Port" />
-            </div>
-            <div>
-              <label class="networkswitch-label">Zone</label>
-              <input class="networkswitch-value" [(ngModel)]="nwsw.source.zone" placeholder="Zone" />
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h4 class="panel-title">
-          <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
-           Destination: {{nwsw.destination.host}}
-          </a>
-        </h4>
-      </div>
-      <div id="collapse3" class="panel-collapse collapse">
-        <div class="panel-body">
-          <div class="networkswitch-part">
-            <div>
-              <label class="networkswitch-label">Host</label>
-              <input class="networkswitch-value" [(ngModel)]="nwsw.destination.host" placeholder="Host" />
-            </div>
-            <div>
-              <label class="networkswitch-label">Gruppe</label>
-              <input class="networkswitch-value" [(ngModel)]="nwsw.destination.group" placeholder="Gruppe" />
-            </div>
-            <div>
-              <label class="networkswitch-label">Ip Adresse</label>
-              <input class="networkswitch-value" [(ngModel)]="nwsw.destination.ipAddr" placeholder="Ip Adresse" />
-            </div>
-            <div>
-              <label class="networkswitch-label">Port</label>
-              <input class="networkswitch-value" [(ngModel)]="nwsw.destination.port" placeholder="Port" />
-            </div>
-            <div>
-              <label class="networkswitch-label">Zone</label>
-              <input class="networkswitch-value" [(ngModel)]="nwsw.destination.zone" placeholder="Zone" />
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <button (click)="goBack()">Back</button>
-  <button (click)="save()">Save</button>
-  <button (click)="delete()">Delete</button>
+    <button class="btn btn-default" (click)="goBack()">Back</button>
+    <button class="btn btn-default" type="submit" (click)="save()">Save</button>
+    <button class="btn btn-default" (click)="delete()">Delete</button>
+  </form>
 </div>
