--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,3 +29,12 @@ header {
   height: prem(100);
   align-items: center;
 }
+
+
+.ng-valid[required], .ng-valid.required  {
+  border-left: 5px solid #42A948; /* green */
+}
+
+.ng-invalid:not(form)  {
+  border-left: 5px solid #a94442; /* red */
+}
