- ID is a string (instead of number) - default button (=executed on ENTER) styled differently - some forms corrected for ENTER (executed just first button) - new SessionStorageService which stores the User in the SessionStorage - networkswitching has two new fields:   - creationBy: user which created it   - lastchangeBy: user which last changed it   Sorting updated due to these changes

--- a/src/app/create-network-switching/create-network-switching.component.html
+++ b/src/app/create-network-switching/create-network-switching.component.html
@@ -14,7 +14,7 @@
             <div class="networkswitch-part">
               <div>
                 <label class="networkswitch-label">id</label>
-                <input class="networkswitch-value" [(ngModel)]="nwsw.id" name="id"  placeholder="id" number />
+                <input class="networkswitch-value" [(ngModel)]="nwsw.id" name="id"  placeholder="id" />
               </div>
               <div>
                 <label class="networkswitch-label">protocol</label>
@@ -103,7 +103,7 @@
         </div>
       </div>
     </div>
-    <button class="btn btn-default" (click)="goBack()">Back</button>
+    <button class="btn" type="button" (click)="goBack()">Back</button>
     <button class="btn btn-default" type="submit" (click)="save()">Save</button>
 
   </form>
