--- a/src/app/network-switchings-browser/network-switchings-browser.component.html
+++ b/src/app/network-switchings-browser/network-switchings-browser.component.html
@@ -74,7 +74,7 @@
       <div class="network-part">
         <div class="networkswitch-label">ID:</div><div class="networkswitch-value">{{nwsw.id}}</div>
         <div class="networkswitch-label">State:</div><div class="networkswitch-value">{{nwsw.state}}</div>
-        <div class="networkswitch-label">User:</div><div class="networkswitch-value">{{nwsw.user}}</div>
+        <div class="networkswitch-label">User:</div><div class="networkswitch-value">{{nwsw.creationBy}}</div>
         <div class="networkswitch-label">Teststate</div><div class="networkswitch-value">{{nwsw.getLastTeststate()}}</div>
       </div>
       <div class="network-part-title">Source</div>
