--- a/src/app/user-management/user-management.component.html
+++ b/src/app/user-management/user-management.component.html
@@ -33,13 +33,12 @@
     </div>
   </div>
 
-  <!-- -->
   <div [hidden]="!errormessage"
        class="alert alert-danger">
     {{errormessage}}
   </div>
 
-  <button type="button"
+  <button type="submit"
           class="btn btn-default"
           (click)="login()"
           [disabled]="isLoggedIn() || !loginForm.form.valid">
@@ -47,39 +46,39 @@
   </button>
 
   <button type="button"
-          class="btn btn-default"
+          class="btn"
           (click)="initUser(); loginForm.reset()">
     Reset
   </button>
 
   <button type="button"
-          class="btn btn-default"
+          class="btn"
           (click)="logout()"
           [disabled]="!isLoggedIn()">
     Logout (TODO move to Menue)
   </button> <!-- TODO Move somewhere else -->
 
   <button type="button"
-          class="btn btn-default"
+          class="btn"
           (click)="registerUser()"
           [disabled]="isLoggedIn() || !loginForm.form.valid">
     Sign Up
   </button>
 
   <button type="button"
-          class="btn btn-default"
+          class="btn"
           (click)="updateUser()">
     Password forgotten (TODO Delete?)
   </button> <!-- TODO Move somewhere else -->
 
   <button type="button"
-          class="btn btn-default"
+          class="btn"
           (click)="updateUser()">
     Change Password (TODO Delete?)
   </button>
 
   <button type="button"
-          class="btn btn-default"
+          class="btn"
           (click)="deleteUser()"
           [disabled]="!isLoggedIn()">
     Delete User (TODO show 'are you sure?' before executing)
