--- a/src/app/create-network-switching/create-network-switching.component.html
+++ b/src/app/create-network-switching/create-network-switching.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="nwsw">
-  <form>
+  <form #f="ngForm">
     <div class="panel-group" id="accordion">
       <div class="panel panel-default">
         <div class="panel-heading">
@@ -13,20 +13,20 @@
           <div class="panel-body">
             <div class="networkswitch-part">
               <div>
-                <label class="networkswitch-label">id</label>
-                <input class="networkswitch-value" [(ngModel)]="nwsw.id" name="id"  placeholder="id" />
+                <label class="networkswitch-label" for="id">id</label>
+                <input class="form-control networkswitch-value" [(ngModel)]="nwsw.id" placeholder="id" name="id" id="id" type="text" />
               </div>
               <div>
-                <label class="networkswitch-label">protocol</label>
-                <input class="networkswitch-value" [(ngModel)]="nwsw.protocol" name="protocol"  placeholder="protocol" />
+                <label class="networkswitch-label" for="protocol" >protocol</label>
+                <input class="form-control networkswitch-value" [(ngModel)]="nwsw.protocol" name="protocol" id="protocol" placeholder="protocol" />
               </div>
               <div>
-                <label class="networkswitch-label">state</label>
-                <input class="networkswitch-value" [(ngModel)]="nwsw.state" name="state"  placeholder="state" />
+                <label class="networkswitch-label" for="state">state</label>
+                <input class="form-control networkswitch-value" [(ngModel)]="nwsw.state" name="state" id="state" placeholder="state" />
               </div>
               <div>
-                <label class="networkswitch-label">remark</label>
-                <textarea class="networkswitch-value" [(ngModel)]="nwsw.remark" name="remark"  placeholder="remark"></textarea>
+                <label class="networkswitch-label" for="remark">remark</label>
+                <textarea class="form-control networkswitch-value" [(ngModel)]="nwsw.remark" name="remark" id="remark" placeholder="remark"></textarea>
               </div>
             </div>
           </div>
@@ -44,24 +44,28 @@
           <div class="panel-body">
             <div class="networkswitch-part">
               <div>
-                <label class="networkswitch-label">Host</label>
-                <input class="networkswitch-value" [(ngModel)]="nwsw.source.host" name="source-host" placeholder="Host" />
+                <label class="networkswitch-label" for="source-host">Host</label>
+                <input class="form-control networkswitch-value" [(ngModel)]="nwsw.source.host" #sourceHost="ngModel" name="source-host" id="source-host" required="{{!sourceIpAddr.valid}}" placeholder="Host" pattern="^(([a-zA-Z0-9]|[a-zA-Z0-9][a-zA-Z0-9\-]*[a-zA-Z0-9])\.)*([A-Za-z0-9]|[A-Za-z0-9][A-Za-z0-9\-]*[A-Za-z0-9])$" />
               </div>
               <div>
-                <label class="networkswitch-label">Gruppe</label>
-                <input class="networkswitch-value" [(ngModel)]="nwsw.source.group" name="source-group" placeholder="Gruppe" />
+                <label class="networkswitch-label" for="source-group">Gruppe</label>
+                <input class="form-control networkswitch-value" [(ngModel)]="nwsw.source.group" name="source-group" id="source-group" placeholder="Gruppe" />
               </div>
               <div>
-                <label class="networkswitch-label">Ip Adresse</label>
-                <input class="networkswitch-value" [(ngModel)]="nwsw.source.ipAddr" name="source-ipAddr" placeholder="Ip Adresse" />
+                <label class="networkswitch-label" for="source-ipAddr">Ip Adresse</label>
+                <input class="form-control networkswitch-value" [(ngModel)]="nwsw.source.ipAddr" #sourceIpAddr="ngModel" name="source-ipAddr" id="source-ipAddr" required="{{!sourceHost.valid}}" placeholder="Ip Adresse" pattern="^[0-9.-]+$" />
               </div>
               <div>
-                <label class="networkswitch-label">Port</label>
-                <input class="networkswitch-value" [(ngModel)]="nwsw.source.port" name="source-port" placeholder="Port" />
+                <label class="networkswitch-label" for="source-port">Port</label>
+                <input class="form-control networkswitch-value" [(ngModel)]="nwsw.source.port" name="source-port" id="source-port" placeholder="Port" type="number" />
               </div>
               <div>
-                <label class="networkswitch-label">Zone</label>
-                <input class="networkswitch-value" [(ngModel)]="nwsw.source.zone" name="source-zone" placeholder="Zone" />
+                <label class="networkswitch-label" for="source-zone">Zone</label>
+                <select class="form-control" [(ngModel)]="nwsw.destination.zone"  id="source-zone" name="source-zone">
+                  <option *ngFor="let zone of zones">
+                    {{zone}}
+                  </option>
+                </select>
               </div>
             </div>
           </div>
@@ -79,24 +83,30 @@
           <div class="panel-body">
             <div class="networkswitch-part">
               <div>
-                <label class="networkswitch-label">Host</label>
-                <input class="networkswitch-value" [(ngModel)]="nwsw.destination.host" name="destination-host" placeholder="Host" />
+                <label class="networkswitch-label" for="destination-host">Host</label>
+                <input class="form-control networkswitch-value" [(ngModel)]="nwsw.destination.host" #destinationHost="ngModel" name="destination-host" id="destination-host" placeholder="Host" required="{{!destinationIpAddr.valid}}" pattern="^(([a-zA-Z0-9]|[a-zA-Z0-9][a-zA-Z0-9\-]*[a-zA-Z0-9])\.)*([A-Za-z0-9]|[A-Za-z0-9][A-Za-z0-9\-]*[A-Za-z0-9])$" />
               </div>
               <div>
-                <label class="networkswitch-label">Gruppe</label>
-                <input class="networkswitch-value" [(ngModel)]="nwsw.destination.group" name="destination-group" placeholder="Gruppe" />
+                <label class="networkswitch-label" for="destination-group">Gruppe</label>
+                <input class="form-control networkswitch-value" [(ngModel)]="nwsw.destination.group" name="destination-group" id="destination-group" placeholder="Gruppe" />
               </div>
               <div>
-                <label class="networkswitch-label">Ip Adresse</label>
-                <input class="networkswitch-value" [(ngModel)]="nwsw.destination.ipAddr" name="destination-ipAddr" placeholder="Ip Adresse" />
+                <label class="networkswitch-label" for="destination-ipAddr">Ip Adresse</label>
+                <input class="form-control networkswitch-value" [(ngModel)]="nwsw.destination.ipAddr" #destinationIpAddr="ngModel" required="{{!destinationHost.valid}}"  name="destination-ipAddr" id="destination-ipAddr" placeholder="Ip Adresse" pattern="^[0-9.-]+$" />
               </div>
               <div>
-                <label class="networkswitch-label">Port</label>
-                <input class="networkswitch-value" [(ngModel)]="nwsw.destination.port" name="destination-port" placeholder="Port" />
+                <label class="networkswitch-label" for="destination-port">Port</label>
+                <input class="form-control networkswitch-value" [(ngModel)]="nwsw.destination.port" name="destination-port" id="destination-port" placeholder="Port" />
               </div>
               <div>
-                <label class="networkswitch-label">Zone</label>
-                <input class="networkswitch-value" [(ngModel)]="nwsw.destination.zone" name="destination-zone" placeholder="Zone" />
+                <label class="networkswitch-label" for="destination-zone">Zone</label>
+                <div class="form-group">
+                  <select class="form-control" [(ngModel)]="nwsw.destination.zone" name="destination-zone" id="destination-zone">
+                    <option *ngFor="let zone of zones">
+                      {{zone}}
+                    </option>
+                  </select>
+                </div>
               </div>
             </div>
           </div>
@@ -104,7 +114,7 @@
       </div>
     </div>
     <button class="btn" type="button" (click)="goBack()">Back</button>
-    <button class="btn btn-default" type="submit" (click)="save()">Save</button>
+    <button class="btn btn-default" type="submit" [disabled]="!f.valid"  (click)="save()">Save</button>
 
   </form>
 </div>
