- new navbar based on bootstrap (buttons moved from user-management.component to main.component) - new attribute directive 'multiEmail' for validating textarea containing 1+ email addresses - new component 'multi-email-form' (see above) - multi-email-form is used to enter emails to invite them to current project - current user no longer saved in sessionStorage (if done like this the JWT token must be saved there as well)

--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -11,6 +11,16 @@
   width: auto;
 }
 
+.navbar-brand {
+  padding: 2px 6px;
+}
+
+.icon {
+  max-height: prem(50);
+  width: auto;
+}
+
+
 
 /*.network-part + .network-part {
   border-top: 1px solid $border-color;
