--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,4 +1,109 @@
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#"><img class="icon" alt="PortMatrix" src="../../favicon.svg"></a>
+    </div>
+    <p class="navbar-text">PortMatrix</p>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
+        <li><p class="navbar-text">{{getUserIdString()}}</p></li>
+        <li><p class="navbar-text">{{getRoleString()}}</p></li>
+        <li>
+          <button type="button"
+                  class="btn btn-default navbar-btn"
+                  [disabled]="!isLoggedIn()"
+                  data-toggle="modal"
+                  data-target="#deleteUserModal">
+            Delete User...
+          </button>
+        </li>
+        <li>
+          <button type="button"
+                  class="btn btn-default navbar-btn"
+                  [disabled]="!isLoggedIn()"
+                  data-toggle="modal"
+                  data-target="#inviteColleaguesDialog">
+          Invite collegues...
+          </button>
+        </li>
+        <li>
+          <button type="button"
+                  class="btn btn-default navbar-btn"
+                  (click)="logout()"
+                  [disabled]="!isLoggedIn()">
+            <span class="glyphicon glyphicon-log-out"
+                  aria-hidden="true"
+                  title="Logout"></span>
+          </button>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+
+
 <div>{{errorMessage}}</div>
 
 <router-outlet></router-outlet>
 
+
+<!-- Modal dialogs -->
+<div class="modal fade" tabindex="-1" role="dialog" id="deleteUserModal">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Delete Confirm</h4>
+      </div>
+      <div class="modal-body">
+        <p>Are you sure to delete this user?</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+        <button type="button"
+                class="btn btn-primary"
+                data-dismiss="modal"
+                (click)="deleteUser()">Delete</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="modal fade" tabindex="-1" role="dialog" id="inviteColleaguesDialog" (shown.bs.modal)="inviteColleaguesDialogOpened()">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Add users</h4>
+      </div>
+      <div class="modal-body">
+        <p>Enter colleagues' emails to invite working on this project:</p>
+
+        <multi-email-form #multiEmailFormField
+                          (inputValid)="setInviteColleaguesFormValid(multiEmailFormField.isMultiEmailValid())">
+        </multi-email-form>
+      </div>
+      <div class="modal-footer">
+        <button type="button"
+                class="btn btn-default"
+                data-dismiss="modal">Cancel</button>
+        <button type="button"
+                class="btn btn-primary"
+                data-dismiss="modal"
+                [disabled]="!multiEmailFormValid"
+                (click)="inviteColleagues(multiEmailFormField.getEmailAddresses())">Invite</button>
+      </div>
+    </div>
+  </div>
+</div>
