--- a/src/app/edit-network-switching/edit-network-switching.component.scss
+++ b/src/app/edit-network-switching/edit-network-switching.component.scss
@@ -1,3 +1,6 @@
+@import "../../mixinsAndFunctions";
+@import "../../variables";
+
 .networkswitch-label {
   display: block;
 }
@@ -8,4 +11,16 @@
 
 .networkswitch-part {
   width: 50%;
+  padding-left: prem(10);
+  padding-right: prem(10);
+}
+
+@media (max-width: $width-mobile) {
+  .networkswitch-part {
+    width: 100%;
+  }
+
+  .panel-body {
+    flex-direction: column;
+  }
 }
