Added login Test

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -15,8 +15,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><p class="navbar-text">{{getUserIdString()}}</p></li>
-        <li><p class="navbar-text">{{getRoleString()}}</p></li>
+        <li><p class="navbar-text user-email">{{getUserIdString()}}</p></li>
+        <li><p class="navbar-text user-role">{{getRoleString()}}</p></li>
         <li>
           <button type="button"
                   class="btn btn-default navbar-btn"
