--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -29,10 +29,10 @@
         <li>
           <button type="button"
                   class="btn btn-default navbar-btn"
-                  [disabled]="!isLoggedIn()"
+                  [disabled]="!isLoggedIn() || !isProjectAdmin()"
                   data-toggle="modal"
                   data-target="#inviteColleaguesDialog">
-          Invite collegues...
+            Invite collegues...
           </button>
         </li>
         <li>
