--- a/src/app/edit-network-switching/edit-network-switching.component.scss
+++ b/src/app/edit-network-switching/edit-network-switching.component.scss
@@ -24,3 +24,14 @@
     flex-direction: column;
   }
 }
+
+
+// additional style:
+.glyphicon-ok {
+  color: green;
+}
+
+// additional style:
+.glyphicon-flash {
+  color: red;
+}
