--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -8,9 +8,10 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#"><img class="icon" alt="PortMatrix" src="../../favicon.svg"></a>
+      <a class="navbar-brand" (click)="gotoNwswBrowsing()">
+        <img class="icon" alt="PortMatrix" src="../../favicon.svg">
+      </a>
     </div>
-    <p class="navbar-text">PortMatrix</p>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
