--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -1,5 +1,5 @@
-@import "../../variables";
-@import "../../mixinsAndFunctions";
+@import "../css-imports/_variables";
+@import "../css-imports/_mixinsAndFunctions";
 
 
 .tab-content {
