--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
-@import "variables";
-@import "customBootstrap";
+@import "app/css-imports/_variables";
+@import "app/css-imports/_customBootstrap";
 
 
 body {
